[package]
name = "krapao"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
color-eyre = "0.6"
config = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.16.1", features = ["full"] }
tonic = "0.6"
prost = "0.9"
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.6"
