[package]
name = "miwen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.9.0"
color-eyre = "0.6"
kube = { version = "0.68.0", default-features = true, features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.14.0", features = ["v1_22"] }
tokio = { version = "1.16.1", features = ["full"] }
gen = { path = "../gen" }
futures = "0.3.19"
serde_json = "1.0"
